<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginOptionsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back02"
        android:foreground="@color/black_transparent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipBtn"
        android:text="@string/skip"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:backgroundTint="@android:color/transparent"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPhoneBtn"
            android:minHeight="@dimen/m_button_height"
            app:icon="@drawable/phone_black"
            android:text="@string/phone_number"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/continueWithTableTv"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/continueWithTableTv"
                android:text="@string/or_continue_with"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/continueWithTableTv"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moreOptionLl"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmailBtn"
                android:text="@string/email"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:icon="@drawable/email_black"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginGoogleBtn"
                android:text="@string/google"
                android:layout_weight="1"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginStart="5dp"
                app:icon="@drawable/google_white"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>