<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterEmailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="10dp"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:src="@drawable/person_black"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorOnPrimary"
            android:layout_marginVertical="15dp"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerLabelTv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/create_a_new_account"
            android:textColor="?attr/colorOnPrimary"
            android:layout_below="@+id/profileIv"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:startIconDrawable="@drawable/email_black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEt"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/lock_white"
            android:layout_below="@+id/emailTil">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEt"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cPasswordTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/lock_white"
            android:layout_below="@+id/passwordTil">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cPasswordEt"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountTv"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_below="@+id/cPasswordTil"
            android:text="@string/have_account_login"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:minHeight="@dimen/m_button_height"
            android:text="@string/register"
            android:layout_alignParentBottom="true"
            app:icon="@drawable/key_white"/>

    </RelativeLayout>

</RelativeLayout>