<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="10dp"
            app:tint="?attr/colorOnPrimary"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:src="@drawable/person_black"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorOnPrimary"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginPhoneLabelTv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/login_to_your_account"
            android:textColor="?attr/colorOnPrimary"
            android:layout_below="@id/profileIv"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneInputRl"
        android:padding="10dp"
        android:visibility="visible">

        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneCodeTil"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:minWidth="60dp"
            android:minHeight="56dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/colorGray01"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumberTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_toEndOf="@+id/phoneCodeTil"
            android:hint="@string/phone_num"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:startIconDrawable="@drawable/phone_black">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumberEt"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendOtpBtn"
            android:minHeight="@dimen/m_button_height"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/phoneNumberTil"
            android:text="@string/send_otp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otpInputRl"
        android:padding="10dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otpTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/otp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/phone_black"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/otpEt"
                android:inputType="number"
                android:maxLength="6"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyOtpBtn"
            android:minHeight="@dimen/m_button_height"
            android:layout_below="@+id/otpTil"
            android:layout_marginTop="10dp"
            android:text="@string/verify_otp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resendOtpTv"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/didn_t_receive_otp_resend"
            android:layout_below="@+id/verifyOtpBtn"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"/>

    </RelativeLayout>

</LinearLayout>