<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="10dp"
            app:tint="?attr/colorOnPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorOnPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:src="@drawable/person_black"
            android:background="?attr/colorOnPrimary"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
            android:layout_below="@+id/toolbarTitleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarDescriptionTv"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:text="@string/forgot_password_send_password"
            android:gravity="center"
            android:layout_below="@+id/profileIv"
            android:textColor="?attr/colorOnPrimary"
            android:paddingHorizontal="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@+id/toolbarRl"
        android:paddingHorizontal="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/email_black"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEt"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:layout_alignParentBottom="true"
            android:minHeight="@dimen/m_button_height"
            android:text="@string/submit"
            app:icon="@drawable/key_white"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

</RelativeLayout>